trunk/Archive2/d4/26522ef110ca7d/output
main.cpp: In function 'int main()':
main.cpp:10:2: error: expected initializer before 'for'
  for( i = 0; i < 3 ; ++i)   
  ^
main.cpp:10:14: error: 'i' was not declared in this scope
  for( i = 0; i < 3 ; ++i)   
              ^
main.cpp:13:14: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
   if(t[3] = 2)  x = 0;
              ^
main.cpp:13:17: error: 'x' was not declared in this scope
   if(t[3] = 2)  x = 0;
                 ^
main.cpp:14:8: error: 'x' was not declared in this scope
   else x = 1; 
        ^
main.cpp:16:39: warning: format '%d' expects a matching 'int' argument [-Wformat=]
   printf("la valeur de x est : %d .\n");
                                       ^
