trunk/Archive2/d4/26522ef110ca7d/main.cpp
#include <stdio.h>


int main() {
    
    
 int t[]={4, 3, 2, 1};
 int x
 
 for( i = 0; i < 3 ; ++i)   
    t[i]++;
    
  if(t[3] = 2)  x = 0;
  else x = 1; 
  
  printf("la valeur de x est : %d .\n");
   
}